@@ -21,6 +21,9 @@ RELEASE X.X.X - XXX
 
     - Fix an exception if a null command-line argument is passed in.
 
+    - Evaluate Requires() prerequisites before a Node's direct children
+      (sources and dependencies).
+
 
 
 RELEASE 1.2.0.d20090223 - Mon, 23 Feb 2009 08:41:06 -0800
